# RISL

./: AGENTS.md  Cargo.toml  run-behavioral-tests  rust-toolchain.toml
crates/compiler/rislc/: Cargo.toml  build.rs  messages.ftl
crates/compiler/rislc/src/: abi.rs  artifact.rs  attr.rs  codegen.rs  compiler.rs  context.rs  core_shim.rs  hir_ext.rs  hir_ext_build.rs  lib.rs
crates/compiler/rislc/src/monomorphize/: collect.rs  errors.rs  mod.rs
crates/compiler/rislc/src/slir_build/: builder.rs  context.rs  mod.rs  risl_intrinsic.rs  shims.rs  value.rs
crates/compiler/rislc/src/stable_cg/: common.rs  layout.rs  mod.rs  scalar.rs
crates/compiler/slir/: Cargo.toml
crates/compiler/slir/src/: core.rs  dependencies.rs  import.rs  lib.rs  rvsdg_to_scf.rs  ty.rs
crates/compiler/slir/src/cfg/: cfg.rs  debug.rs  mod.rs  visit.rs
crates/compiler/slir/src/cfg_to_rvsdg/: mod.rs  rvsdg_gen.rs
crates/compiler/slir/src/intrinsic/: mod.rs  op_acos.rs  op_acosh.rs  op_alloca.rs  op_array_length.rs  op_asin.rs  op_asinh.rs  op_atan.rs  op_atanh.rs  op_binary.rs  op_bool_to_branch_selector.rs  op_branch_selector_to_case.rs  op_case_to_branch_selector.rs  op_ceil.rs  op_clamp.rs  op_convert_to_bool.rs  op_convert_to_f32.rs  op_convert_to_i32.rs  op_convert_to_u32.rs  op_cos.rs  op_cosh.rs  op_discriminant_ptr.rs  op_element_ptr.rs  op_exp.rs  op_exp2.rs  op_extract_element.rs  op_extract_field.rs  op_field_ptr.rs  op_floor.rs  op_fract.rs  op_fused_mul_add.rs  op_get_discriminant.rs  op_get_slice_offset.rs  op_inverse_sqrt.rs  op_load.rs  op_log.rs  op_log2.rs  op_matrix.rs  op_max.rs  op_min.rs  (+21 more)
crates/compiler/slir/src/rvsdg/: mod.rs  rvsdg.rs
crates/compiler/slir/src/scf/: scf.rs
crates/compiler/slir/src/smi/: buffer_layout.rs  build.rs  mod.rs
crates/compiler/slir/src/util/: thin_set.rs
crates/compiler/slir/src/write/: wgsl.rs
crates/risl_cargo/: Cargo.toml
crates/rvsdg-dump-cli/: Cargo.toml  README.md
crates/rvsdg-dump-cli/src/: id_resolution.rs  main.rs  renderer.rs
crates/rvsdg-dump-cli/src/mode/: function.rs  list.rs  mod.rs  node.rs  region.rs  trace_state.rs  trace_value.rs  type_inspect.rs
tests/behavioral/: Cargo.toml
tests/behavioral-tests/: Cargo.toml  README.md
tests/behavioral-tests/.cargo/: config.toml
tests/behavioral-tests/src/: enum_result.rs  lib.rs  slice_get_index.rs  struct_single_scalar_field.rs  struct_single_slice_field.rs  variable_pointer_if_else.rs  while_loop.rs
tests/behavioral-tests/src/adt/: mod.rs  struct_single_nested_scalar_field.rs  struct_single_nested_slice_field.rs  struct_single_scalar_field.rs  struct_single_slice_field.rs  struct_single_struct_field.rs
tests/behavioral-tests/src/array/: as_mut_slice.rs  as_slice.rs  mod.rs
tests/behavioral-tests/src/array/cmp/: mod.rs  partial_eq_array.rs  partial_eq_slice_ref.rs  partial_eq_slice_ref_mut.rs
tests/behavioral-tests/src/closure/: capture_move_multiple.rs  capture_move_single_scalar.rs  capture_move_struct_scalar.rs  capture_ref_multiple.rs  capture_ref_single_scalar.rs  capture_ref_single_slice.rs  capture_ref_struct_scalar.rs  capture_ref_struct_slice.rs  mod.rs
tests/behavioral-tests/src/cmp/ord/: clamp.rs  min.rs  mod.rs
tests/behavioral-tests/src/iter/: mod.rs
tests/behavioral-tests/src/iter/iterator/: advance_by.rs  count.rs  fold.rs  last.rs  mod.rs  nth.rs  size_hint.rs  try_fold.rs
tests/behavioral-tests/src/num/: f32_acos.rs  f32_acosh.rs  f32_asin.rs  f32_asinh.rs  f32_atan.rs  f32_atanh.rs  f32_ceil.rs  f32_clamp.rs  f32_cos.rs  f32_cosh.rs  f32_exp.rs  f32_exp2.rs  f32_floor.rs  f32_fract.rs  f32_inverse_sqrt.rs  f32_ln.rs  f32_log2.rs  f32_max.rs  f32_min.rs  f32_mul_add.rs  f32_powf.rs  f32_round.rs  f32_round_ties_even.rs  f32_saturate.rs  f32_sin.rs  f32_sinh.rs  f32_smoothstep.rs  f32_sqrt.rs  f32_step.rs  f32_tan.rs  f32_tanh.rs  f32_to_degrees.rs  f32_to_radians.rs  f32_trunc.rs  mod.rs  non_zero.rs
tests/behavioral-tests/src/ops/: add.rs  add_assign.rs  bit_and.rs  bit_and_assign.rs  bit_or.rs  bit_or_assign.rs  bit_xor.rs  bit_xor_assign.rs  div.rs  div_assign.rs  mod.rs  mul.rs  mul_assign.rs  neg.rs  not.rs  rem.rs  rem_assign.rs  shl.rs  shl_assign.rs  shr.rs  shr_assign.rs  sub.rs  sub_assign.rs  try_op.rs
tests/behavioral-tests/src/slice/: destructure_first.rs  destructure_last.rs  first.rs  first_mut.rs  is_empty.rs  last.rs  last_mut.rs  len.rs  mod.rs  split_at_checked.rs  split_at_mut_checked.rs  split_at_mut_unchecked.rs  split_at_unchecked.rs  split_first.rs  split_first_mut.rs  split_last.rs  split_last_mut.rs
tests/behavioral-tests/src/slice/cmp/: mod.rs  partial_eq_slice.rs  ref_mut_partial_eq_array.rs  ref_partial_eq_array.rs
tests/behavioral-tests/src/slice/iter/: advance_back_by.rs  advance_by.rs  all.rs  any.rs  clone.rs  count.rs  find.rs  find_map.rs  fold.rs  for_each.rs  forward.rs  forward_sub_slice.rs  is_empty.rs  iter.rs  iter_mut.rs  iter_sub_slice.rs  last.rs  len.rs  mod.rs  next_back.rs  nth.rs  nth_back.rs  position.rs  rposition.rs  size_hint.rs
tests/behavioral-tests/src/slice/iter_mut/: advance_back_by.rs  advance_by.rs  all.rs  any.rs  count.rs  find.rs  find_map.rs  fold.rs  for_each.rs  forward.rs  forward_sub_slice.rs  is_empty.rs  last.rs  len.rs  mod.rs  next_back.rs  nth.rs  nth_back.rs  position.rs  rposition.rs  size_hint.rs
tests/behavioral-tests/src/slice_index/: mod.rs
tests/behavioral-tests/src/slice_index/range/: get.rs  get_unchecked_mut.rs  mod.rs
tests/behavioral-tests/src/slice_index/range_from/: get_mut.rs
tests/behavioral-tests/src/slice_index/range_full/: get.rs  get_mut.rs  get_unchecked.rs  get_unchecked_mut.rs
tests/behavioral-tests/src/slice_index/range_inclusive/: get_mut.rs  get_unchecked.rs  get_unchecked_mut.rs
tests/behavioral-tests/src/slice_index/range_to/: get.rs  get_mut.rs
tests/behavioral-tests/src/variable_pointer/: if_else_different_address_spaces.rs  if_else_same_address_space.rs  loop_alternating_cycle.rs  loop_alternating_no_cycle.rs  mod.rs
tests/behavioral/src/: enum_result.rs  lib.rs  slice_get_index.rs  variable_pointer_if_else.rs
(+168 files in other folders)
