[workspace]
resolver = "2"
members = [
    "crates/compiler/rislc",
    "crates/compiler/slir",
    "crates/library/risl",
    "crates/library/risl_macros",
    "crates/risl_cli",
    "crates/slir-explorer",
    "tests/examples/builtin_vec",
    "tests/examples/hello_world",
    "tests/examples/simple_enum",
    "tests/examples/simple_lib",
    "tests/examples/slice",
    "tests/examples/variable_pointers",
    "tests/examples/workgroup_binding",
]
default-members = [
    "crates/compiler/rislc",
    "crates/compiler/slir",
    "crates/library/risl",
    "crates/library/risl_macros",
    "crates/risl_cli",
    "crates/slir-explorer",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ar = "0.9"
arrayvec = "0.7"
base64 = "0.22"
bincode = "2.0.0-rc.3"
bit-set = "0.8"
bit-vec = "0.8"
delegate = "0.13"
either = "1.15"
empa-smi = "0.1.1"
indexmap = "2.7"
index_vec = "0.1"
internment = "0.8"
itertools = "0.14"
ordered-float = "4.6"
proc-macro2 = "1.0"
regex = "1.11"
rustc-hash = "2.1"
serde = "1.0"
sled = "1.0.0-alpha.124"
slir = { path = "./crates/compiler/slir", version = "0.1.0" }
slotmap = "1.0"
smallvec = "1.13"
syn = "2.0"
thin-vec = "0.2"
thiserror = "2.0"
quote = "1.0"
