[workspace]
resolver = "2"
members = [
    "crates/compiler/rislc",
    "crates/compiler/slir",
    "crates/library/risl",
    "crates/library/risl_macros",
    "crates/library/risl_request",
    "crates/library/risl_smi",
    "crates/risl_cargo",
    "crates/slir-explorer",
    "tests/behavioral",
    "tests/examples/builtin_vec",
    "tests/examples/external_shader_request",
    "tests/examples/hello_world",
    "tests/examples/simple_enum",
    "tests/examples/simple_lib",
    "tests/examples/slice",
    "tests/examples/variable_pointers",
    "tests/examples/workgroup_binding",
]
default-members = [
    "crates/compiler/rislc",
    "crates/compiler/slir",
    "crates/library/risl",
    "crates/library/risl_macros",
    "crates/slir-explorer",
    "tests/behavioral",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
ar = "0.9"
arrayvec = "0.7"
base64 = "0.22"
bincode = "2"
bit-set = "0.8"
bit-vec = "0.8"
cargo = "0.93"
cargo-util = "0.2"
color-print = "0.3"
delegate = "0.13"
either = "1"
empa = { path = "../glitz/crates/empa", version = "0.1.0" }
futures = "0.3"
indexmap = "2"
index_vec = "0.1"
internment = "0.8"
itertools = "0.14"
ordered-float = "5"
pollster = "0.4"
proc-macro2 = "1.0"
regex = "1"
risl = { path = "./crates/library/risl", version = "0.1.0" }
risl-request = { path = "./crates/library/risl_request", version = "0.1.0" }
risl-smi = { path = "./crates/library/risl_smi", version = "0.1.0" }
rustc-hash = "2"
serde = "1"
sled = "1.0.0-alpha.124"
slir = { path = "./crates/compiler/slir", version = "0.1.0" }
slotmap = "1"
smallvec = "1.13"
syn = "2"
thin-vec = "0.2"
thiserror = "2"
quote = "1"
