[package]
name = "behavioral-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
doctest = false

[features]
test_enum_result = []
test_variable_pointer_if_else = []
test_slice_is_empty = []
test_slice_len = []
test_slice_index_range_get = []
test_slice_index_range_get_mut = []
test_slice_index_range_get_unchecked = []
test_slice_index_range_get_unchecked_mut = []
test_slice_index_range_full_get = []
test_slice_index_range_full_get_mut = []
test_slice_index_range_full_get_unchecked = []
test_slice_index_range_full_get_unchecked_mut = []
test_slice_index_range_from_get = []
test_slice_index_range_from_get_mut = []
test_slice_index_range_from_get_unchecked = []
test_slice_index_range_from_get_unchecked_mut = []
test_slice_index_range_inclusive_get = []
test_slice_index_range_inclusive_get_mut = []
test_slice_index_range_inclusive_get_unchecked = []
test_slice_index_range_inclusive_get_unchecked_mut = []
test_slice_index_range_to_get = []
test_slice_index_range_to_get_mut = []
test_slice_index_range_to_get_unchecked = []
test_slice_index_range_to_get_unchecked_mut = []
test_slice_index_usize_get = []
test_slice_index_usize_get_mut = []
test_slice_index_usize_get_unchecked = []
test_slice_index_usize_get_unchecked_mut = []
test_while_loop = []

[dependencies]
behavioral-tests-macros = { path = "../behavioral-tests-macros" }
empa = { workspace = true, features = ["risl", "dx12", "metal"] }
futures = { workspace = true }
pollster = { workspace = true }
risl = { workspace = true }
