[package]
name = "behavioral-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
doctest = false

[features]
test_adt_struct_single_nested_scalar_field = []
test_adt_struct_single_nested_slice_field = []
test_adt_struct_single_scalar_field = []
test_adt_struct_single_slice_field = []
test_adt_struct_single_struct_field = []
test_array_as_mut_slice = []
test_array_as_slice = []
test_array_cmp_partial_eq_array = []
test_array_cmp_partial_eq_slice_ref = []
test_array_cmp_partial_eq_slice_ref_mut = []
test_cmp_ord_min = []
test_enum_result = []
test_iter_iterator_advance_by = []
test_iter_iterator_count = []
test_iter_iterator_fold = []
test_iter_iterator_last = []
test_iter_iterator_nth = []
test_iter_iterator_size_hint = []
test_iter_iterator_try_fold = []
test_num_f32_min = []
test_num_f32_max = []
test_num_f32_round = []
test_num_non_zero = []
test_ops_try_op = []
test_slice_cmp_partial_eq_slice = []
test_slice_cmp_ref_mut_partial_eq_array = []
test_slice_cmp_ref_partial_eq_array = []
test_slice_destructure_first = []
test_slice_destructure_last = []
test_slice_first = []
test_slice_first_mut = []
test_slice_is_empty = []
test_slice_len = []
test_slice_index_range_get = []
test_slice_index_range_get_mut = []
test_slice_index_range_get_unchecked = []
test_slice_index_range_get_unchecked_mut = []
test_slice_index_range_full_get = []
test_slice_index_range_full_get_mut = []
test_slice_index_range_full_get_unchecked = []
test_slice_index_range_full_get_unchecked_mut = []
test_slice_index_range_from_get = []
test_slice_index_range_from_get_mut = []
test_slice_index_range_from_get_unchecked = []
test_slice_index_range_from_get_unchecked_mut = []
test_slice_index_range_inclusive_get = []
test_slice_index_range_inclusive_get_mut = []
test_slice_index_range_inclusive_get_unchecked = []
test_slice_index_range_inclusive_get_unchecked_mut = []
test_slice_index_range_to_get = []
test_slice_index_range_to_get_mut = []
test_slice_index_range_to_get_unchecked = []
test_slice_index_range_to_get_unchecked_mut = []
test_slice_index_range_to_inclusive_get = []
test_slice_index_range_to_inclusive_get_mut = []
test_slice_index_range_to_inclusive_get_unchecked = []
test_slice_index_range_to_inclusive_get_unchecked_mut = []
test_slice_index_usize_get = []
test_slice_index_usize_get_mut = []
test_slice_index_usize_get_unchecked = []
test_slice_index_usize_get_unchecked_mut = []
test_slice_iter_iter = []
test_slice_iter_iter_mut = []
test_slice_iter_iter_sub_slice = []
test_slice_last = []
test_slice_last_mut = []
test_slice_split_at_checked = []
test_slice_split_at_mut_checked = []
test_slice_split_at_mut_unchecked = []
test_slice_split_at_unchecked = []
test_slice_split_first = []
test_slice_split_first_mut = []
test_slice_split_last = []
test_slice_split_last_mut = []
test_variable_pointer_if_else = []
test_while_loop = []

[dependencies]
behavioral-tests-macros = { path = "../behavioral-tests-macros" }
empa = { workspace = true, features = ["risl", "dx12", "metal"] }
futures = { workspace = true }
pollster = { workspace = true }
risl = { workspace = true }
