[package]
name = "behavioral-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
doctest = false

[features]
test_adt_struct_single_nested_scalar_field = []
test_adt_struct_single_nested_slice_field = []
test_adt_struct_single_scalar_field = []
test_adt_struct_single_slice_field = []
test_adt_struct_single_struct_field = []
test_array_as_mut_slice = []
test_array_as_slice = []
test_array_cmp_partial_eq_array = []
test_array_cmp_partial_eq_slice_ref = []
test_array_cmp_partial_eq_slice_ref_mut = []
test_cmp_ord_clamp = []
test_cmp_ord_min = []
test_closure_capture_move_multiple = []
test_closure_capture_move_single_scalar = []
test_closure_capture_move_struct_scalar = []
test_closure_capture_ref_multiple = []
test_closure_capture_ref_single_scalar = []
test_closure_capture_ref_single_slice = []
test_closure_capture_ref_struct_slice = []
test_closure_capture_ref_struct_scalar = []
test_enum_result = []
test_iter_adapters_map_next = []
test_iter_iterator_advance_by = []
test_iter_iterator_count = []
test_iter_iterator_fold = []
test_iter_iterator_last = []
test_iter_iterator_nth = []
test_iter_iterator_size_hint = []
test_iter_iterator_try_fold = []
test_num_f32_min = []
test_num_f32_mul_add = []
test_num_f32_powf = []
test_num_f32_smoothstep = []
test_num_f32_step = []
test_num_f32_max = []
test_num_f32_round_ties_even = []
test_num_f32_saturate = []
test_num_f32_floor = []
test_num_f32_ceil = []
test_num_f32_clamp = []
test_num_f32_fract = []
test_num_f32_trunc = []
test_num_f32_sqrt = []
test_num_f32_inverse_sqrt = []
test_num_f32_exp = []
test_num_f32_exp2 = []
test_num_f32_ln = []
test_num_f32_log2 = []
test_num_f32_cos = []
test_num_f32_acos = []
test_num_f32_cosh = []
test_num_f32_acosh = []
test_num_f32_sin = []
test_num_f32_asin = []
test_num_f32_sinh = []
test_num_f32_asinh = []
test_num_f32_tan = []
test_num_f32_atan = []
test_num_f32_tanh = []
test_num_f32_atanh = []
test_num_f32_to_radians = []
test_num_f32_to_degrees = []
test_num_non_zero = []
test_ops_add = []
test_ops_add_assign = []
test_ops_sub = []
test_ops_sub_assign = []
test_ops_mul = []
test_ops_mul_assign = []
test_ops_neg = []
test_ops_not = []
test_ops_rem = []
test_ops_rem_assign = []
test_ops_div = []
test_ops_div_assign = []
test_ops_bit_and = []
test_ops_bit_and_assign = []
test_ops_bit_or = []
test_ops_bit_or_assign = []
test_ops_bit_xor = []
test_ops_bit_xor_assign = []
test_ops_shl = []
test_ops_shl_assign = []
test_ops_shr = []
test_ops_shr_assign = []
test_ops_try_op = []
test_slice_cmp_partial_eq_slice = []
test_slice_cmp_ref_mut_partial_eq_array = []
test_slice_cmp_ref_partial_eq_array = []
test_slice_destructure_first = []
test_slice_destructure_last = []
test_slice_first = []
test_slice_first_mut = []
test_slice_is_empty = []
test_slice_len = []
test_slice_index_range_get = []
test_slice_index_range_get_mut = []
test_slice_index_range_get_unchecked = []
test_slice_index_range_get_unchecked_mut = []
test_slice_index_range_full_get = []
test_slice_index_range_full_get_mut = []
test_slice_index_range_full_get_unchecked = []
test_slice_index_range_full_get_unchecked_mut = []
test_slice_index_range_from_get = []
test_slice_index_range_from_get_mut = []
test_slice_index_range_from_get_unchecked = []
test_slice_index_range_from_get_unchecked_mut = []
test_slice_index_range_inclusive_get = []
test_slice_index_range_inclusive_get_mut = []
test_slice_index_range_inclusive_get_unchecked = []
test_slice_index_range_inclusive_get_unchecked_mut = []
test_slice_index_range_to_get = []
test_slice_index_range_to_get_mut = []
test_slice_index_range_to_get_unchecked = []
test_slice_index_range_to_get_unchecked_mut = []
test_slice_index_range_to_inclusive_get = []
test_slice_index_range_to_inclusive_get_mut = []
test_slice_index_range_to_inclusive_get_unchecked = []
test_slice_index_range_to_inclusive_get_unchecked_mut = []
test_slice_index_usize_get = []
test_slice_index_usize_get_mut = []
test_slice_index_usize_get_unchecked = []
test_slice_index_usize_get_unchecked_mut = []
test_slice_iter_advance_back_by = []
test_slice_iter_advance_by = []
test_slice_iter_forward = []
test_slice_iter_forward_sub_slice = []
test_slice_iter_last = []
test_slice_iter_next_back = []
test_slice_iter_nth = []
test_slice_iter_nth_back = []
test_slice_iter_size_hint = []
test_slice_iter_all = []
test_slice_iter_any = []
test_slice_iter_clone = []
test_slice_iter_count = []
test_slice_iter_fold = []
test_slice_iter_for_each = []
test_slice_iter_mut_advance_back_by = []
test_slice_iter_mut_advance_by = []
test_slice_iter_mut_forward = []
test_slice_iter_mut_forward_sub_slice = []
test_slice_iter_mut_last = []
test_slice_iter_mut_next_back = []
test_slice_iter_mut_nth = []
test_slice_iter_mut_nth_back = []
test_slice_iter_mut_size_hint = []
test_slice_iter_mut_all = []
test_slice_iter_mut_any = []
test_slice_iter_mut_count = []
test_slice_iter_mut_fold = []
test_slice_iter_mut_for_each = []
test_slice_last = []
test_slice_last_mut = []
test_slice_split_at_checked = []
test_slice_split_at_mut_checked = []
test_slice_split_at_mut_unchecked = []
test_slice_split_at_unchecked = []
test_slice_split_first = []
test_slice_split_first_mut = []
test_slice_split_last = []
test_slice_split_last_mut = []
test_variable_pointer_if_else_same_address_space = []
test_variable_pointer_if_else_different_address_spaces = []
test_while_loop = []

[dependencies]
behavioral-tests-macros = { path = "../behavioral-tests-macros" }
empa = { workspace = true, features = ["risl", "dx12", "metal"] }
futures = { workspace = true }
pollster = { workspace = true }
risl = { workspace = true }
